# Toy_ML_Framework

./: .gitignore  CMakeLists.txt  Makefile  README.md  autodiff.cpp  example.cpp  img2col_conv.cpp  main.cpp  model.cpp  nnetwork  nnetwork.cxx
include/: Conv.h  MatAutoDiff.h  MatOp.h  Model.h  Op.h  deep_core.h  vector_ops.h
src/: Conv.cpp  MatAutoDiff.cpp  Model.cpp  deep_core.cpp  vector_ops.cpp
